--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title<ainda nd/title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <title>TODDYNHO DA CREUDETE</title>
+    
 </head>
 <body>
-   nome do estabelecimento
-   descrição
-   missão
-   slogam
-
+   <h1 style="text-align:center;">TODDYNHO DA CREUDETE  </h1>
+   <p><strong>A melhor loja</strong> de toddynho de todos os tempos</p>
+   <p>Ser a numero um em vender <em>toddynhos</em> do mundo</p>
+   <p style="font-size: 30px l;">Venham esperimentar o melhor <em>toddynho</em> de todos, voce ira ficar
+   maravilhado com nossa bebida, <u>nunca mais querer beber outra bebida a nao ser a nosaa</u></p> 
 </body>
 </html>
