--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>TODDYNHO DA CREUDETE</title>
+    <title>TODDYNHO DA CRAUDETE</title>
     
+     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
-   <h1 style="text-align:center;">TODDYNHO DA CREUDETE  </h1>
+
+   <h1 style="text-align:center;">TODDYNHO DA CRAUDETE  </h1>
+
+
+
    <p><strong>A melhor loja</strong> de toddynho de todos os tempos</p>
+
+
    <p>Ser a numero um em vender <em>toddynhos</em> do mundo</p>
+
+   
    <p style="font-size: 30px l;">Venham esperimentar o melhor <em>toddynho</em> de todos, voce ira ficar
    maravilhado com nossa bebida, <u>nunca mais querer beber outra bebida a nao ser a nosaa</u></p> 
 </body>
