--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 </head>
 <body>
+    <img class="capa" src="capa.jpg"> 
 
-   <h1 style="text-align:center;">TODDYNHO DA CRAUDETE  </h1>
+   <h1>TODDYNHO DA CRAUDETE  </h1>
 
 
 
