--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
    <p><strong>A melhor loja</strong> de toddynho de todos os tempos</p>
 
 
-   <p>Ser a numero um em vender <em>toddynhos</em> do mundo</p>
+   <p>Ser a número 1 em vender <em>toddynho</em> do mundo</p>
 
    
-   <p style="font-size: 30px l;">Venham esperimentar o melhor <em>toddynho</em> de todos, voce ira ficar
-   maravilhado com nossa bebida, <u>nunca mais querer beber outra bebida a nao ser a nosaa</u></p> 
+   <p style="font-size: 30px l;">Venham esperimentar o melhor <em>toddynho</em> de todos, você irá ficar
+   maravilhado com nossa bebida, <u>nunca mais vai querer beber outra bebida a nao ser a nossa</u></p> 
 </body>
 </html>
