--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
    
    <p style="font-size: 30px l;">Venham esperimentar o melhor <em>toddynho</em> de todos, você irá ficar
    maravilhado com nossa bebida, <u>nunca mais vai querer beber outra bebida a nao ser a nossa</u></p> 
+
+   <div class="beneficios"> 
+    <ul>
+       <li> TODDYNHOS SABOROSOS</li>
+       <li> TODDYNHOS DE QUALIDADE FEITO COM O MELHOR PRODUTO</li>
+       <li> TODA SEMANA OFERTA</li>
+    </ul>
+   </div>
 </body>
 </html>
