--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
    maravilhado com nossa bebida, <u>nunca mais vai querer beber outra bebida a nao ser a nossa</u></p> 
 
    <div class="beneficios"> 
+      <h2>beneficios da nossa loja:</h2>
     <ul>
        <li> TODDYNHOS SABOROSOS</li>
        <li> TODDYNHOS DE QUALIDADE FEITO COM O MELHOR PRODUTO</li>
        <li> TODA SEMANA OFERTA</li>
     </ul>
+    <img class="foto-beneficios" src="foto-beneficios.jpg">
    </div>
 </body>
 </html>
