--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 
 </head>
 <body>
-    <img class="capa" src="capa.jpg"> 
-
+   <header>
+      <div class="caixa">
+          <h3><img class="imagem-logo" src="logo.jpg"></h3>
+          <nav class="cabecalho">
+              <a href="Index.html"> Home </a>
+              <a href="Produtos.html"> Produtos </a>
+              <a href="Contatos.html"> Contatos </a>
+          </nav>
+      </div>
+  </header>
+   <img class="capa" src="capa.jpg">
+            
    <h1>TODDYNHO DA CRAUDETE  </h1>
 
 
